{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 666,
  "lineage": "55c6c247-05a0-0a0e-b7e9-00f19ad0dba2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "private_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05edf2d87fdbd91c1",
            "arn": "arn:aws:ec2:eu-west-1:069057294951:instance/i-060abf66e26bf6e34",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ssm-instance-profile",
            "id": "i-060abf66e26bf6e34",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a600868025e1e992",
            "private_dns": "ip-10-59-136-8.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.59.136.8",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0efc24a0dc9eb7b58",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-013e2d03cf3cb71a9",
            "tags": {
              "Name": "private-ec2-instance"
            },
            "tags_all": {
              "Name": "private-ec2-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c9f355b972e234a1"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.private_ec_instance_profile",
            "aws_iam_role.private_ec2_role",
            "aws_security_group.private_ec2_sg",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:069057294951:security-group/sg-0c9f355b972e234a1",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c9f355b972e234a1",
            "ingress": [],
            "name": "private-ec2-security-group",
            "name_prefix": "",
            "owner_id": "069057294951",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0254d5a0847ca755e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpce_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:069057294951:security-group/sg-0045fd77a2f69446d",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0045fd77a2f69446d",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c9f355b972e234a1"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "vpce-security-group",
            "name_prefix": "",
            "owner_id": "069057294951",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0254d5a0847ca755e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.private_ec2_sg",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ec2_messages",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:069057294951:vpc-endpoint/vpce-0378869975b2138b8",
            "dns_entry": [
              {
                "dns_name": "vpce-0378869975b2138b8-2yfs545k.ec2messages.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-0378869975b2138b8-2yfs545k-eu-west-1a.ec2messages.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "ec2messages.eu-west-1.amazonaws.com",
                "hosted_zone_id": "Z0963141INDT3QBV880B"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0378869975b2138b8",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-02b0b4d1a2158e92a"
            ],
            "owner_id": "069057294951",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0045fd77a2f69446d"
            ],
            "service_name": "com.amazonaws.eu-west-1.ec2messages",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.59.134.172",
                "subnet_id": "subnet-013e2d03cf3cb71a9"
              }
            ],
            "subnet_ids": [
              "subnet-013e2d03cf3cb71a9"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0254d5a0847ca755e"
          },
          "dependencies": [
            "aws_security_group.private_ec2_sg",
            "aws_security_group.vpce_sg",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3_endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:069057294951:vpc-endpoint/vpce-0ccc9edb3ee11b797",
            "cidr_blocks": [
              "3.5.64.0/21",
              "3.5.72.0/23",
              "52.92.0.0/17",
              "52.218.0.0/17"
            ],
            "id": "vpce-0ccc9edb3ee11b797",
            "owner_id": "069057294951",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-6da54004",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-012548bc8f6f954d7"
            ],
            "service_name": "com.amazonaws.eu-west-1.s3",
            "state": "available",
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0254d5a0847ca755e"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:069057294951:vpc-endpoint/vpce-05c01840c9cf74382",
            "dns_entry": [
              {
                "dns_name": "vpce-05c01840c9cf74382-j8pday3z.ssm.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-05c01840c9cf74382-j8pday3z-eu-west-1a.ssm.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "ssm.eu-west-1.amazonaws.com",
                "hosted_zone_id": "Z083245312HQK7X5FHWGM"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-05c01840c9cf74382",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-09dc41cec2baf025b"
            ],
            "owner_id": "069057294951",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0045fd77a2f69446d"
            ],
            "service_name": "com.amazonaws.eu-west-1.ssm",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.59.166.210",
                "subnet_id": "subnet-013e2d03cf3cb71a9"
              }
            ],
            "subnet_ids": [
              "subnet-013e2d03cf3cb71a9"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0254d5a0847ca755e"
          },
          "dependencies": [
            "aws_security_group.private_ec2_sg",
            "aws_security_group.vpce_sg",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssm_messages",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:069057294951:vpc-endpoint/vpce-03a6897df035b6cee",
            "dns_entry": [
              {
                "dns_name": "vpce-03a6897df035b6cee-vtzdhsjt.ssmmessages.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-03a6897df035b6cee-vtzdhsjt-eu-west-1a.ssmmessages.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "ssmmessages.eu-west-1.amazonaws.com",
                "hosted_zone_id": "Z05376153LUCD6743PSCU"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-03a6897df035b6cee",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0105f500d923a1d2e"
            ],
            "owner_id": "069057294951",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0045fd77a2f69446d"
            ],
            "service_name": "com.amazonaws.eu-west-1.ssmmessages",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.59.181.100",
                "subnet_id": "subnet-013e2d03cf3cb71a9"
              }
            ],
            "subnet_ids": [
              "subnet-013e2d03cf3cb71a9"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0254d5a0847ca755e"
          },
          "dependencies": [
            "aws_security_group.private_ec2_sg",
            "aws_security_group.vpce_sg",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:069057294951:network-acl/acl-0ebcbdeec318a48b0",
            "default_network_acl_id": "acl-0ebcbdeec318a48b0",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0ebcbdeec318a48b0",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "069057294951",
            "subnet_ids": [
              "subnet-012f292f5ae444a12",
              "subnet-013e2d03cf3cb71a9",
              "subnet-04026825e00ae68b9",
              "subnet-09ebdfccd30ea8e5a"
            ],
            "tags": {
              "Name": "car-dev-eu-west-1-default",
              "environment": "dev",
              "owners": "car"
            },
            "tags_all": {
              "Name": "car-dev-eu-west-1-default",
              "environment": "dev",
              "owners": "car"
            },
            "vpc_id": "vpc-0254d5a0847ca755e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:069057294951:route-table/rtb-0abd97e4db81ef676",
            "default_route_table_id": "rtb-0abd97e4db81ef676",
            "id": "rtb-0abd97e4db81ef676",
            "owner_id": "069057294951",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "car-dev-eu-west-1-default",
              "environment": "dev",
              "owners": "car"
            },
            "tags_all": {
              "Name": "car-dev-eu-west-1-default",
              "environment": "dev",
              "owners": "car"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0254d5a0847ca755e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:069057294951:security-group/sg-0686e38f2b19e57ab",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0686e38f2b19e57ab",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "069057294951",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "car-dev-eu-west-1-default",
              "environment": "dev",
              "owners": "car"
            },
            "tags_all": {
              "Name": "car-dev-eu-west-1-default",
              "environment": "dev",
              "owners": "car"
            },
            "vpc_id": "vpc-0254d5a0847ca755e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e2a868c08d159759",
            "arn": "arn:aws:ec2:eu-west-1:069057294951:elastic-ip/eipalloc-0e2a868c08d159759",
            "association_id": "eipassoc-0261df8580265ae3e",
            "domain": "vpc",
            "id": "eipalloc-0e2a868c08d159759",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-0c38b9f771a0169ee",
            "private_dns": "ip-10-59-17-203.eu-west-1.compute.internal",
            "private_ip": "10.59.17.203",
            "public_dns": "ec2-34-253-89-91.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.253.89.91",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "car-dev-eu-west-1-eu-west-1a",
              "environment": "dev",
              "owners": "car"
            },
            "tags_all": {
              "Name": "car-dev-eu-west-1-eu-west-1a",
              "environment": "dev",
              "owners": "car"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:069057294951:internet-gateway/igw-067176e6a1d8e91a4",
            "id": "igw-067176e6a1d8e91a4",
            "owner_id": "069057294951",
            "tags": {
              "Name": "car-dev-eu-west-1",
              "environment": "dev",
              "owners": "car"
            },
            "tags_all": {
              "Name": "car-dev-eu-west-1",
              "environment": "dev",
              "owners": "car"
            },
            "vpc_id": "vpc-0254d5a0847ca755e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e2a868c08d159759",
            "association_id": "eipassoc-0261df8580265ae3e",
            "connectivity_type": "public",
            "id": "nat-03a8e09075ba21c6d",
            "network_interface_id": "eni-0c38b9f771a0169ee",
            "private_ip": "10.59.17.203",
            "public_ip": "34.253.89.91",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-012f292f5ae444a12",
            "tags": {
              "Name": "car-dev-eu-west-1-eu-west-1a",
              "environment": "dev",
              "owners": "car"
            },
            "tags_all": {
              "Name": "car-dev-eu-west-1-eu-west-1a",
              "environment": "dev",
              "owners": "car"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-012548bc8f6f954d71080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-03a8e09075ba21c6d",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-012548bc8f6f954d7",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-067176e6a1d8e91a4",
            "id": "r-rtb-030f5af9578b033001080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-030f5af9578b03300",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:069057294951:route-table/rtb-012548bc8f6f954d7",
            "id": "rtb-012548bc8f6f954d7",
            "owner_id": "069057294951",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-03a8e09075ba21c6d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "car-dev-eu-west-1-private",
              "environment": "dev",
              "owners": "car"
            },
            "tags_all": {
              "Name": "car-dev-eu-west-1-private",
              "environment": "dev",
              "owners": "car"
            },
            "timeouts": null,
            "vpc_id": "vpc-0254d5a0847ca755e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:069057294951:route-table/rtb-030f5af9578b03300",
            "id": "rtb-030f5af9578b03300",
            "owner_id": "069057294951",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-067176e6a1d8e91a4",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "car-dev-eu-west-1-public",
              "environment": "dev",
              "owners": "car"
            },
            "tags_all": {
              "Name": "car-dev-eu-west-1-public",
              "environment": "dev",
              "owners": "car"
            },
            "timeouts": null,
            "vpc_id": "vpc-0254d5a0847ca755e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fa9943517859083b",
            "route_table_id": "rtb-012548bc8f6f954d7",
            "subnet_id": "subnet-013e2d03cf3cb71a9"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05de5ea0cdeb49a27",
            "route_table_id": "rtb-012548bc8f6f954d7",
            "subnet_id": "subnet-04026825e00ae68b9"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-072628e67c6d5701c",
            "route_table_id": "rtb-030f5af9578b03300",
            "subnet_id": "subnet-012f292f5ae444a12"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-059040af6c6987ddb",
            "route_table_id": "rtb-030f5af9578b03300",
            "subnet_id": "subnet-09ebdfccd30ea8e5a"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:069057294951:subnet/subnet-013e2d03cf3cb71a9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.59.128.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-013e2d03cf3cb71a9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "069057294951",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "car-dev-eu-west-1-private-eu-west-1a",
              "environment": "dev",
              "owners": "car"
            },
            "tags_all": {
              "Name": "car-dev-eu-west-1-private-eu-west-1a",
              "environment": "dev",
              "owners": "car"
            },
            "vpc_id": "vpc-0254d5a0847ca755e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:069057294951:subnet/subnet-04026825e00ae68b9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.59.192.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04026825e00ae68b9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "069057294951",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "car-dev-eu-west-1-private-eu-west-1c",
              "environment": "dev",
              "owners": "car"
            },
            "tags_all": {
              "Name": "car-dev-eu-west-1-private-eu-west-1c",
              "environment": "dev",
              "owners": "car"
            },
            "vpc_id": "vpc-0254d5a0847ca755e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:069057294951:subnet/subnet-012f292f5ae444a12",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.59.0.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-012f292f5ae444a12",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "069057294951",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "car-dev-eu-west-1-public-eu-west-1a",
              "environment": "dev",
              "owners": "car"
            },
            "tags_all": {
              "Name": "car-dev-eu-west-1-public-eu-west-1a",
              "environment": "dev",
              "owners": "car"
            },
            "vpc_id": "vpc-0254d5a0847ca755e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:069057294951:subnet/subnet-09ebdfccd30ea8e5a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.59.64.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09ebdfccd30ea8e5a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "069057294951",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "car-dev-eu-west-1-public-eu-west-1c",
              "environment": "dev",
              "owners": "car"
            },
            "tags_all": {
              "Name": "car-dev-eu-west-1-public-eu-west-1c",
              "environment": "dev",
              "owners": "car"
            },
            "vpc_id": "vpc-0254d5a0847ca755e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:069057294951:vpc/vpc-0254d5a0847ca755e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.59.0.0/16",
            "default_network_acl_id": "acl-0ebcbdeec318a48b0",
            "default_route_table_id": "rtb-0abd97e4db81ef676",
            "default_security_group_id": "sg-0686e38f2b19e57ab",
            "dhcp_options_id": "dopt-7348d915",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0254d5a0847ca755e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0abd97e4db81ef676",
            "owner_id": "069057294951",
            "tags": {
              "Name": "car-dev-eu-west-1",
              "environment": "dev",
              "owners": "car"
            },
            "tags_all": {
              "Name": "car-dev-eu-west-1",
              "environment": "dev",
              "owners": "car"
            }
          }
        }
      ]
    }
  ]
}